# japan-culture-mcp

./: .gitignore  DATA_LAYER_READINESS.md  Dockerfile  LICENSE  ONTOLOGY_DESIGN_REPORT.md  PHASE6_DATA_REPORT.md  README.md  README_ja.md  api_report.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  requirements.txt  smithery.yaml
demo_output/: hokusai_network.json  kyoto_sacred_route.json  yokai_serendipity.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DATA_SOURCES.md  generate_data_coverage_doc.py
ontology/: LLM_EVALUATION_REPORT.md  LLM_GENERATION_REPORT.md  PHASE4_REPORT.md  SERENDIPITY_TEST_REPORT.md  TAGGING_REPORT.md  anilist_taxonomy.json  llm_evaluator.py  llm_generator.py  madb_taxonomy.json  phase9_serendipity_report.json  taxonomy_crosswalk.md  wikidata_id_mapping.json
reports/: phase17_codex_user_test.csv  phase17_improvement_proposals.md  phase17_source_breakdown.csv  phase17_summary.md  phase17_year_distribution.csv  phase18_codex_user_test.csv  phase18_improvement_proposals.md  phase18_stream2_completion.md
scripts/: api_connectivity_test.py  benchmark.py  create_test_db.py  demo_scenarios.py  phase10_entity_expansion.py  phase10_entity_expansion_v2.py  phase10_entity_expansion_v3.py  phase10_pilgrimage.py  phase10_pilgrimage_connections.py  phase10a_japansearch_bulk.py  phase10a_kokudo_import.py  phase10b_ndl_oaipmh.py  phase10c_japansearch_wave2.py  phase10d_connections.py  phase10d_connections_boost.py  phase10e_japansearch_wave3.py  phase10f_dbpedia_wikidata.py  phase10g_wikidata_diverse.py  phase10h_ndl_sru_bulk.py  phase10h_ndl_sru_v2.py  phase11_anime_tourism.py  phase11_cleanup_pass2.py  phase11_extra_spots.py  phase11_filter_connections.py  phase11_manual_coords.py  phase11_route_test.py  phase11_seichimap_import.py  phase11_wikidata_pilgrimage.py  phase12_connections_expand.py  phase12_connections_supplement.py  phase12_japansearch_expand.py  phase12_pilgrimage_expand.py  phase12_temples_shrines.py  phase12_wikidata_weak.py  phase13_architecture.py  phase13_connections_boost.py  (+82 more)
(+5 files in other folders)
