[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "japan-culture-mcp"
version = "1.3.0"
description = "Japanese culture knowledge graph MCP server with 8.3M+ entities, 750K+ geolocated, 45 tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Japan Culture MCP Team"}
]
keywords = ["mcp", "japan", "culture", "knowledge-graph", "anime", "ukiyo-e"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
maps = [
    "googlemaps>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]

[project.scripts]
japan-culture-mcp = "server.japan_culture_mcp:mcp.run"
